  Bertrand
- patch #1821154, HTTP authentication: fix auth working with php/mod_fastcgi,
  thanks to yarodin
- wrong default charset in case of broken session
- bug #1824506 [profiling] Profile command repeated on older MySQL servers
- bug #1825172 [export] Exporting and functions
- bug #1817224 [import] Incorrect detection of file_uploads in some cases,
  thanks to Juergen Wind

2.11.2.0 (2007-10-27)
- patch #1791576 HTTP auth: support REDIRECT_REMOTE_USER, thanks to Allard
+ [lang] Serbian update, thanks to Mihailo Stefanovic  
- bug #1798841 [relations] Copying db does not copy internal relations
- bug #1798646 [display] Character '+' in query wrongly interpreted 
- bug #1801919 [themes] Do not use NaviDatabaseNameColor for fieldset legend 
- bug #1764735 [core] Designer: PDF error when deleting a table
- bug #1764195 [views] DROP button does not work on defective views
- bug #1805773 [relations] browse foreign values: return values not escaped,
  thanks to Alex Rambau
- bug #1807923 [login] Login with html entities in password fails
- [core] Undefined variable when creating a table that exists
- patch #1808578 Changes in font size were no longer detected after patch
  #1787915
+ [lang] Croatian update, thanks to Renato Pavicic
- patch #1807615 [GUI] Display patch for column rights in Opera
- bug #1811519 Can't delete user with a german umlaut.
- bug #1811519 [privileges] fixed used collation for accessing mysql.user in server privileges
- it should not be possible to move or copy a table to information_schema
- bug #1814733 win: copy db to mixed name db fails
- bug #1777249 [display] Remove horizontal lines in navigation panel
- bug #1805102 [display] TextareaAutoSelect issues: set this parameter
  default value to false to help cut&paste from a terminal window; also
  set focus to the textarea
- bug #1814463 [display] Wrong database size
- bug #1811527 [display] Problem with links to the MySQL manual