@@ -24,6 +24,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #1825172 [export] Exporting and functions
 - bug #1817224 [import] Incorrect detection of file_uploads in some cases,
   thanks to Juergen Wind
+- bug #1777249 [display] Do not underline links in left panel (in default
+  themes)
 
 2.11.2.0 (2007-10-27)
 - patch #1791576 HTTP auth: support REDIRECT_REMOTE_USER, thanks to Allard
